tests/expand/should-fail/arcane_stub.expanded.stderr
warning: unused import: `arcane`
 --> tests/expand/should-fail/arcane_stub.expanded.rs:1:16
  |
1 | use archmage::{arcane, X64V3Token, NeonToken};
  |                ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0658]: use of unstable library feature `panic_internals`: internal details of the implementation of the `panic!` and related macros
  --> tests/expand/should-fail/arcane_stub.expanded.rs:17:9
   |
17 |         ::core::panicking::panic_fmt(
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `token`
 --> tests/expand/should-fail/arcane_stub.expanded.rs:7:25
  |
7 | fn __arcane_process_x86(token: X64V3Token, data: &[f32; 4]) -> f32 {
  |                         ^^^^^ help: if this is intentional, prefix it with an underscore: `_token`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
